tests/ui/typeck/missing-type-annotation.stderr
error[E0282]: type annotations needed
  --> $DIR/missing-type-annotation.rs:3:9
   |
LL |     let x;
   |         ^
   |
help: consider giving `x` an explicit type
   |
LL |     let x: /* Type */;
   |          ++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
